--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -67,6 +67,22 @@
   line-height: 1.6;
 }
 
+.postImage {
+  margin-top: 1rem;
+  margin-left: 0;
+  border: 2px var(--pink) solid;
+  border-radius: 2rem;
+  max-width: 50rem;
+  transition: border 0.1s, border-radious 0.1s, scale 0.1s, margin-left 0.1s;
+}
+
+.postImage:hover{
+  border: 3px var(--purple) solid;
+  border-radius: 1rem;
+  margin-left: 0.6rem;
+  scale: 1.02;
+}
+
 .commentForm {
   width: 100%;
   margin-top: 1.5rem;
@@ -106,7 +122,7 @@
 }
 
 .commentForm button[type=submit]:hover{
-  background: var(--pink);
+  background: var(--purple);
 }
 
 .commentForm footer {
