--- a/src/components/Topbar.module.css
+++ b/src/components/Topbar.module.css
@@ -1,6 +1,8 @@
-.sidebar{
+.topbar{
+    margin-top: 2rem;
+    max-width: 80%;
     background: var(--gray-800);
-    border-radius: 8px;
+    border-radius: 1rem;
     overflow: hidden;
 }
 
@@ -30,13 +32,16 @@
     line-height: 1.6;
 }
 
-.sidebar footer{
+.topbar footer{
     border-top: 1px solid  var(--gray-600);
     margin-top: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1.5rem 2rem 2rem;
 }
 
-.sidebar footer a{
+.topbar footer a{
     background: transparent;
     color: var(--pink);
     border: 1px solid var(--pink);
@@ -45,17 +50,17 @@
     padding: 0 1rem;
     font-weight: bold;
     text-decoration: none;
+    max-width: 10rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
-
-    transition: color 0.1s, background-color 0.1s;
+    transition: color 0.1s, background-color 0.1s, border 0.1s;
 }
 
-.sidebar footer a:hover{
-    background: var(--pink);
+.topbar footer a:hover{
+    background: var(--purple);
     color: var(--white);
+    border: 1px solid var(--purple);
 }
 
 .avatar{
