--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,10 +2,42 @@
   background: var(--gray-800);
   display: flex;
   justify-content: center;
-  padding: 1.25rem 0;
+  align-items: center;
+  height: 5vw;
   width: 100%;
 }
 
-.header img{
-  height: 2rem;
+.logo_bg{
+  display: flex;
+  width: 25vw;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background: radial-gradient(circle, var(--white) 0%, var(--gray-800) 50%);
+}
+
+.logo{
+  height: 3vw;
+  transition: scale 0.1s;
+  animation: skew 1.5s linear infinite
+}
+
+.logo:hover{
+  scale: 1.25;
+  animation: shake 0.2s linear infinite;
+}
+
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  25% { transform: rotate(5deg); }
+  50% { transform: rotate(0eg); }
+  75% { transform: rotate(-5deg); }
+}
+
+@keyframes skew {
+  0% { transform: skewX(-5deg); }
+  5% { transform: skewX(5deg); }
+  10% { transform: skewX(-5deg); }
+  15% { transform: skewX(5deg); }
+  20% { transform: skewX(0deg); }
 }
