--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -16,3 +16,15 @@
   flex-direction: column;
   align-items: center;
 }
+
+.container {
+  height: 20vw;
+  width: 75vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rotated {
+  transform: rotate(-10deg);
+}
