--- a/src/pages/NotFound/NotFound.module.css
+++ b/src/pages/NotFound/NotFound.module.css
@@ -1,14 +1,31 @@
 .page {
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .headerBar{
-  width: 100%;
+  height: 10vw;
+  width: 70vw;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+  background: var(--gray-800);
+  color: #ff0000;
+  border-radius: 1vw;
+  transform: rotate(-10deg);
+}
+
+.logo {
+  height: 5vw;
+  width: 5vw;
+  animation: glitch 1s linear infinite;
+}
+
+@keyframes glitch {
+  0% {transform: skewX(-10deg);}
+  2% {transform: skewX(10deg);}
+  4% {transform: skewX(0deg);}
 }
