--- a/src/pages/Gate/Gate.module.css
+++ b/src/pages/Gate/Gate.module.css
@@ -2,7 +2,7 @@ section{
   margin-top: 3vw;
   margin-bottom: 3vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -10,8 +10,7 @@ section{
 .container{
   width: 80%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -31,16 +30,16 @@ section{
 }
 
 .clock{
-  width: 100%;
-  height: 10vw;
+  width: 40%;
+  height: 20vw;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
 
 .clock>div{
-  margin-bottom: 1vw;
+  margin-bottom: 3vw;
   border-radius: 1vw;
   border-style: outset;
   display: flex;
@@ -49,15 +48,12 @@ section{
   align-items: center;
 }
 
-.weekBox{
-  width: 50%;
-  height: 100%;
-}
 
+.weekBox,
 .dateBox,
 .timeBox{
-  width: 35%;
-  height: 100%;
+  width: 100%;
+  height: 20vh;
 }
 
 .clock p{
