--- a/src/pages/Games/Recomendations.module.css
+++ b/src/pages/Games/Recomendations.module.css
@@ -1,18 +1,55 @@
 .gameCard{
-  width: 100%;
-  height: 15rem;
+  display: flex;
+  flex-direction: column;
   margin-top: 1rem;
   background: var(--gray-800);
   border-radius: 1rem;
-  border: solid, var(--pink), 0.3rem;
+  border: solid var(--pink) 0.2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleSpace{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 5rem;
+}
+
+.title{
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 0.5rem;
+}
+
+.linkSpace{
+  display: flex;
+  padding: 0.4rem 0 0.4rem 0;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 a{
-  text-decoration: none;
-  color: var(--purple);
+  text-decoration: underline;
+  color: var(--pink);
   transition: 0.2s color;
 }
 
 a:hover{
-  color: var(--pink)
+  color: var(--purple)
+}
+
+.descriptionSpace{
+  padding: 0.5rem 0 0.5rem 0;
+  width: 98%;
+}
+
+.descriptionLine{
+  text-align: justify;
+  padding-bottom: 0.5rem;
+}
+
+.descriptionLine + .descriptionLine{
+  padding-top: 0.75rem;
+  border-top: solid var(--gray-900);
 }
